# Crag

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  run_tests.sh
builtin/: panic.c  panic.y
docs/: SYNTAX.md
examples/: arraylist.y  editor.crag  enums.y  errors.y  features.y  fibb.crag  fibb.y  globals.y  linked_list.y  quine.y  scoping.y  shrimple.y  sin.y  strings.crag  struct_methods.y  threading.crag  type_inference.y  vector.crag
examples/ed/: libc.y  main.y
examples/modules/: libc.y  main.crag  main.y  math.crag  math.y  other.crag  printmore.y
examples/raylib/: .cragrc  crag_raylib.crag  main.crag
runtime/: entry.crag  panic.crag
runtime/macos/: panic_macos.crag
runtime/windows/: panic_windows.crag
src/: ast.cpp  ast.h  backend.h  codegen.cpp  codegen.h  common.h  compiler.cpp  compiler.h  const_eval.cpp  const_eval.h  ir.cpp  ir.h  lexer.cpp  lexer.h  main.cpp  module.h  module_resolver.h  parser.cpp  parser.h  typecase.h  typecheck.cpp  typecheck.h  utils.cpp  utils.h
src/ast/: ast.cpp  ast.h  ast_copy.cpp
src/backends/: llvmcodegen.cpp  llvmcodegen.h
src/typechecking/: builtins.cpp  tables.cpp  tables.h  templates.cpp  typecheck.cpp  typecheck.h
stdlib/: arena.crag  heap.crag  io.crag  math.crag  random.crag  std.crag  string.crag  time.crag  vector.crag
stdlib/fs/: fs.crag
stdlib/libc/: libc.crag  math.crag  stdio.crag  stdlib.crag  string.crag  time.crag  unistd.crag
tests/: 01_hello_world.ytest  03_while_loops.ytest  05_global_variables.ytest  08_arraylist.ytest  09_errors.ytest  10_features.ytest  11_linked_list.ytest  12_sin.ytest  13_struct_methods.ytest  14_foward_decl_not_required.ytest  15_extern_variables.ytest  16_break_statement.ytest  17_continue_statement.ytest  FORMAT.md  alias_chain.cragtest  aliased_generics.cragtest  aliased_generics_success.cragtest  aliased_structs.cragtest  arena.cragtest  array_errors_from_unsized.cragtest  array_init_in_structs.cragtest  arraylist.cragtest  arrays.cragtest  arrays.ytest  arrays_edge_cases.cragtest  arrays_more.cragtest  aug_assign.cragtest  aug_assign.ytest  bitwise_operators.cragtest  break_statement.cragtest  calling_functions.cragtest  calling_functions.ytest  consecutive_returns.cragtest  const_eval_parity.cragtest  continue_statement.cragtest  control_flow_when_return.cragtest  correct_casting.cragtest  enums_1.cragtest  error_parsing.cragtest  errors.cragtest  (+51 more)
tests/mod_test_requires/: imported_generics.crag  mod_math.crag  mod_test_r1.crag
